--- a/renderers/home.html
+++ b/renderers/home.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Web2PDF Grabber</title>
+    <title>Process Dump</title>
     <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="home.css" rel="stylesheet">
